@@ -25,32 +25,9 @@ Use python3 -m scripts.keytester to launch it.
 
 from PyQt5.QtWidgets import QApplication, QWidget, QLabel, QHBoxLayout
 
-from qutebrowser.keyinput import keyutils
-
-
-class KeyWidget(QWidget):
-
-    """Widget displaying key presses."""
-
-    def __init__(self, parent=None):
-        super().__init__(parent)
-        self._layout = QHBoxLayout(self)
-        self._label = QLabel(text="Waiting for keypress...")
-        self._layout.addWidget(self._label)
-
-    def keyPressEvent(self, e):
-        """Show pressed keys."""
-        lines = [
-            str(keyutils.KeyInfo.from_event(e)),
-            '',
-            'key: 0x{:x}'.format(int(e.key())),
-            'modifiers: 0x{:x}'.format(int(e.modifiers())),
-            'text: {!r}'.format(e.text()),
-        ]
-        self._label.setText('\n'.join(lines))
-
+from qutebrowser.misc import miscwidgets
 
 app = QApplication([])
-w = KeyWidget()
+w = miscwidgets.KeyTesterWidget()
 w.show()
 app.exec_()
